--- a/fe/src/features/pronunciation/PronsSecond.css
+++ b/fe/src/features/pronunciation/PronsSecond.css
@@ -393,3 +393,21 @@
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
 } */
+
+.camera-guide-text {
+    z-index: 10;
+    position: absolute;
+    bottom: 55px; /* ON 버튼 바로 위에 배치 */
+    left: 70%;
+    /* transform: translateX(-50%); */
+    background-color: white;
+    color: #ffcc00;
+    padding: 8px 12px;
+    border-radius: 10px;
+    font-size: 14px;
+    font-weight: bold;
+    text-align: center;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    opacity: 0.9;
+    transition: opacity 0.3s ease-in-out;
+}
