--- a/fe/src/features/wordgame/WordMain.css
+++ b/fe/src/features/wordgame/WordMain.css
@@ -1,43 +1,43 @@
-@import url('https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap'); */
 
 /* 전체 컨테이너 */
 .word-main-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  /* justify-content: flex-start; */
   background-color: #ffe0b1; /* 배경색 */
-  height: 100%;
-  padding: 20px;
-  font-family: Arial, sans-serif;
+  height: 100vh;
+  /* padding: 20px; */
+  font-family: 'NPSbold';
   position: relative;
   overflow: hidden;
 }
 
 /* 제목 이미지 */
 .wordtitle-image {
-  width: 80%;
-  max-width: 500px;
-  margin-bottom: 20px;
+  width: 90%;
+  max-width: 680px;
+  /* margin-bottom: 5px; */
 }
 
 /* 게임 카드 섹션 */
 .game-section {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  /* justify-content: center; */
   gap: 20px;
   width: 100%;
   max-height: 100%;
-  overflow: auto;
+  /* overflow: auto; */
 }
 
 /* 게임 카드 공통 스타일 */
 .game-card {
   position: relative;
   width: calc(25vw); /* 너비를 30%로 확대 */
-  height: calc(70vh); /* 높이를 40%로 확대 */
-  max-width: 400px; /* 최대 너비를 400px로 증가 */
+  height: 500px; /* 높이를 40%로 확대 */
+  max-width: 450px; /* 최대 너비를 400px로 증가 */
   max-height: 500px; /* 최대 높이를 500px로 증가 */
   border-radius: 20px;
   box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
@@ -47,7 +47,7 @@
   justify-content: space-between;
   height: calc(70vh);
   padding: 1rem;
-  margin: 1rem;
+  margin: 0.5rem;
   text-align: center;
   color: white;
   background-size: cover;
@@ -74,8 +74,8 @@
 
 /* 카드 제목 */
 .game-card h2 {
-  font-family: 'Gamja Flower', sans-serif;
-  font-size: calc(1.5rem + 0.5vw); /* 부모의 너비에 따라 크기 조정 */
+  font-family: 'SDSamliphopang';
+  font-size: 2.5rem; /* 부모의 너비에 따라 크기 조정 */
   font-weight: bold;
   text-shadow: 2px 2px 4px rgba(239, 153, 58); /* 텍스트 그림자 */
   margin-bottom: 0.5rem;
@@ -84,8 +84,8 @@
 
 /* 카드 설명 */
 .game-card p {
-  font-family: 'Gamja Flower', sans-serif;
-  font-size: calc(1.3rem + 0.3vw); /* 부모의 너비에 따라 크기 조정 */
+  font-family: 'NPSregular';
+  font-size: 1.2rem; /* 부모의 너비에 따라 크기 조정 */
   line-height: 1.6;
   text-shadow: 2px 2px 4px rgba(239, 153, 58); /* 텍스트 그림자 */
   margin: 0;
@@ -144,19 +144,19 @@
 @media (max-width: 1024px) {
   .game-card {
     width: calc(40vw);
-    height: calc(45vh);
+    height: calc(67vh);
   }
 
   .game-card h2 {
-    font-size: calc(1.3rem + 0.5vw); /* 태블릿 크기에 맞게 조정 */
+    font-size: 2rem; /* 태블릿 크기에 맞게 조정 */
   }
 
   .game-card p {
-    font-size: calc(0.9rem + 0.3vw); /* 태블릿 크기에 맞게 조정 */
-  }
+    font-size: 1.2rem;
+}
 }
 
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
   .game-section {
     flex-direction: column;
     align-items: center;
@@ -168,14 +168,14 @@
   }
 
   .game-card h2 {
-    font-size: calc(1.2rem + 0.5vw); /* 모바일 크기에 맞게 조정 */
+    font-size: calc(1.2rem + 0.5vw);
   }
 
   .game-card p {
-    font-size: calc(0.8rem + 0.2vw); /* 모바일 크기에 맞게 조정 */
+    font-size: calc(0.8rem + 0.2vw); 
   }
 
   .button-group button {
-    width: 90px; /* 작은 화면에서 버튼 너비 축소 */
+    width: 90px; 
   }
-}
+} */
