--- a/fe/src/features/room/Webrtc.css
+++ b/fe/src/features/room/Webrtc.css
@@ -202,7 +202,7 @@
     height: 6vh;
     margin: 1rem auto 0.8rem auto;
     padding: 0.6rem 1rem;
-    font-family: "Gamja Flower", sans-serif;
+    font-family: "NPSbold";
     font-size: 1.5rem;
     text-align: center;
     color: rgba(62, 24, 55, 1);
@@ -229,7 +229,7 @@
     overflow: hidden;
 }
 .host-answer-selection h3 {
-    font-family: "Gamja Flower", sans-serif;
+    font-family: "NPSbold";
     font-size: 1.5rem;
     font-weight: bold;
     color: rgba(62, 24, 55, 1);
@@ -297,7 +297,7 @@
     min-width: 8rem;
     padding: 0.8rem 1.2rem;
     font-size: 1.2rem;
-    font-family: "Gamja Flower", sans-serif;
+    font-family: "NPSbold";
     color: white;
     background-color: #4caf50;
     border: none;
@@ -324,7 +324,7 @@
     padding: 0.8rem 1.2rem;
     font-size: 1.2rem;
     font-weight: bold;
-    font-family: "Gamja Flower", sans-serif;
+    font-family: "NPSbold";
     color: white;
 
     background: linear-gradient(45deg, #4caf50, #66bb6a);
@@ -503,7 +503,7 @@
     gap: 0.5rem;
     overflow: hidden;
 
-    font-family: "Gamja Flower", sans-serif;
+    font-family: "NPSbold";
     font-size: 1.2rem;
     font-weight: bold;
     color: black;
